--- a/WebContent/crm/userOperationStat_view.html
+++ b/WebContent/crm/userOperationStat_view.html
@@ -3122,8 +3122,8 @@
         var areaCode = $("#area_code_manual_daypay").val();
         var userOperationStatDto=null;
         userOperationStatDto = {
-            beginDate:begin_end_date[0].trim(),
-            endDate:begin_end_date[1].trim(),
+            beginDate:begin_end_date[0].trim().replace(new RegExp("/","g"),"-"),
+            endDate:begin_end_date[1].trim().replace(new RegExp("/","g"),"-"),
             storeNo:number_str,
             cityName:cityName,
             areaCode:areaCode,
@@ -3260,8 +3260,8 @@
         var areaCode = $("#area_code_manual_daypay").val();
         var userOperationStatDto=null;
         userOperationStatDto = {
-            beginDate:begin_end_date[0].trim(),
-            endDate:begin_end_date[1].trim(),
+            beginDate:begin_end_date[0].trim().replace(new RegExp("/","g"),"-"),
+            endDate:begin_end_date[1].trim().replace(new RegExp("/","g"),"-"),
             storeNo:number_str,
             cityName:cityName,
             areaCode:areaCode,
