--- a/WebContent/crm/userOperationStat_view.html
+++ b/WebContent/crm/userOperationStat_view.html
@@ -2898,7 +2898,7 @@
         var userOperationStatDto=null;
         userOperationStatDto = {
             beginDate:begin_end_date[0].trim().replace(new RegExp("/","g"),"-"),
-            endDate:begin_end_date[1].trim().replace(new RegExp("/","g"),"-"),
+            endDate:addDate(begin_end_date[1].trim().replace(new RegExp("/","g"),"-"),1),
             storeNo:number_str,
             cityName:cityName,
             areaCode:areaCode,
@@ -3035,7 +3035,7 @@
         var userOperationStatDto=null;
         userOperationStatDto = {
             beginDate:begin_end_date[0].trim().replace(new RegExp("/","g"),"-"),
-            endDate:begin_end_date[1].trim().replace(new RegExp("/","g"),"-"),
+            endDate:addDate(begin_end_date[1].trim().replace(new RegExp("/","g"),"-"),1),
             storeNo:number_str,
             cityName:cityName,
             areaCode:areaCode,
@@ -3123,7 +3123,7 @@
         var userOperationStatDto=null;
         userOperationStatDto = {
             beginDate:begin_end_date[0].trim().replace(new RegExp("/","g"),"-"),
-            endDate:begin_end_date[1].trim().replace(new RegExp("/","g"),"-"),
+            endDate:addDate(begin_end_date[1].trim().replace(new RegExp("/","g"),"-"),1),
             storeNo:number_str,
             cityName:cityName,
             areaCode:areaCode,
@@ -3261,7 +3261,7 @@
         var userOperationStatDto=null;
         userOperationStatDto = {
             beginDate:begin_end_date[0].trim().replace(new RegExp("/","g"),"-"),
-            endDate:begin_end_date[1].trim().replace(new RegExp("/","g"),"-"),
+            endDate:addDate(begin_end_date[1].trim().replace(new RegExp("/","g"),"-"),1),
             storeNo:number_str,
             cityName:cityName,
             areaCode:areaCode,
@@ -3709,7 +3709,7 @@
         var userOperationStatDto=null;
         userOperationStatDto = {
             beginDate:begin_end_date[0].replace(new RegExp("/","g"),"-").trim(),
-            endDate:begin_end_date[1].replace(new RegExp("/","g"),"-").trim(),
+            endDate:addDate(begin_end_date[1].replace(new RegExp("/","g"),"-").trim(),1),
             storeNo:"",
             cityName:cityName,
             searchStoreStr:"",
@@ -3799,7 +3799,7 @@
         var userOperationStatDto=null;
         userOperationStatDto = {
             beginDate:begin_end_date[0].replace(new RegExp("/","g"),"-").trim(),
-            endDate:begin_end_date[1].replace(new RegExp("/","g"),"-").trim(),
+            endDate:addDate(begin_end_date[1].replace(new RegExp("/","g"),"-").trim(),1),
             storeNo:"",
             cityName:cityName,
             searchStoreStr:"",
@@ -4235,6 +4235,32 @@
             $("#area_code_manual_daypay").attr("disabled",true);
             $("#area_code_manual_daypay").val("");
         }
+    }
+
+    // 日期，在原有日期基础上，增加days天数，默认增加1天
+    function addDate(date, days) {
+        if (days == undefined || days == '') {
+            days = 1;
+        }
+        var date = new Date(date);
+        date.setDate(date.getDate() + days);
+        var month = date.getMonth() + 1;
+        var day = date.getDate();
+        return date.getFullYear() + '-' + getFormatDate(month) + '-' + getFormatDate(day);
+    }
+
+    // 日期月份/天的显示，如果是1位数，则在前面加上'0'
+    function getFormatDate(arg) {
+        if (arg == undefined || arg == '') {
+            return '';
+        }
+
+        var re = arg + '';
+        if (re.length < 2) {
+            re = '0' + re;
+        }
+
+        return re;
     }
 
 </script>
