社员邀请统计禁用跳转到用户档案

--- a/WebContent/crm/dynamicData_member_invitation.html
+++ b/WebContent/crm/dynamicData_member_invitation.html
@@ -523,7 +523,8 @@
                             +"<td>"+jData[i].storename+"</td>"
                             /*+"<td>"+jData[i].mobilephone+"</td>"*/
                             +"<td>"+jData[i].inviteCode+"</td>"
-                            +"<td><a href=\'javascript:gotoMemberData("+jData[i].inviteCode+")\'>"+jData[i].total+"</a></td>"
+                            // +"<td><a href=\'javascript:gotoMemberData("+jData[i].inviteCode+")\'>"+jData[i].total+"</a></td>"
+                            +"<td>"+jData[i].total+"</td>"
                             +"</tr>";
                         $("#customer_tbody").append(infoStr);
                     }
