注释用户相关功能

--- a/WebContent/crm/current_shopkeeper.html
+++ b/WebContent/crm/current_shopkeeper.html
@@ -181,8 +181,8 @@
                                             <dd><a href="javascript:goToUserMember()"><span class="fa fa-rocket"></span>合作社社员统计</a>
                                             <dd style="position:relative"><a href="javascript:goToProfitStat()"><span class="fa fa-gg"></span>毛利统计（运营）</a>
                                                 <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
-                                            <dd style="position:relative"><a href="javascript:goToMemRemain()"><span class="fa fa-gg"></span>社员价值统计</a>
-                                                <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
+                                            <!--<dd style="position:relative"><a href="javascript:goToMemRemain()"><span class="fa fa-gg"></span>社员价值统计</a>-->
+                                                <!--<img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>-->
                                         </dl>
                                         <dl class="pull-left">
                                             <dt style="text-align:center"><i></i>绩效数据</dt>
@@ -202,9 +202,9 @@
                                         </dl>
                                         <dl class="pull-left">
                                             <dt><i></i>档案数据</dt>
-                                            <dd style="position:relative"><a href="javascript:goToMemberDataStat()"><span class="fa fa-vimeo"></span>社员档案 </a>
+                                            <!--<dd style="position:relative"><a href="javascript:goToMemberDataStat()"><span class="fa fa-vimeo"></span>社员档案 </a>-->
                                                 <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
-                                            <dd><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案</a></dd>
+                                            <!--<dd><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案</a></dd>-->
                                             <dd><a href="javascript:searchData()"><span class="fa fa-file-o"></span>订单档案</a></dd>
                                             <!--<dd class="logo-prohibit"><a href="javascript:js_alert_temporary()"><span class="fa fa-file-o"></span>订单档案</a></dd>-->
                                             <dd><a href="javascript:searchArea()"><span class="fa fa-copy"></span>片区档案</a></dd>
