--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -189,10 +189,10 @@
                                     <dl class="pull-left" id="left-showa1">
                                         <dt style="text-align:center"><i></i>档案数据</dt>
                                         <dd class="col-sm-6"><a href="javascript:searchData()"><span class="fa fa-file-o"></span>订单档案</a></dd>
-                                        <dd class="col-sm-6"><a href="javascript:searchEmployeeData()"><span class="fa fa-newspaper-o"></span>员工档案</a></dd>
-                                        <dd class="col-sm-6"><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案 </a></dd>
+                                        <!--<dd class="col-sm-6"><a href="javascript:searchEmployeeData()"><span class="fa fa-newspaper-o"></span>员工档案</a></dd>-->
+                                        <!--<dd class="col-sm-6"><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案 </a></dd>-->
                                         <dd class="col-sm-6"><a href="javascript:searchArea()"><span class="fa fa-copy"></span>片区档案</a></dd>
-                                        <dd class="col-sm-6" style="position:relative"><a href="javascript:goToMemberDataStat()"><span class="fa fa-vimeo"></span>社员档案 </a>
+                                        <!--<dd class="col-sm-6" style="position:relative"><a href="javascript:goToMemberDataStat()"><span class="fa fa-vimeo"></span>社员档案 </a>-->
                                             <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
                                         <dd class="col-sm-6"><a href="javascript:searchTinyvillageData()"><span class="fa fa-clipboard"></span>小区档案</a></dd>
                                         <dd class="col-sm-6" style="position:relative"><a href="javascript:goToDataFiles()"><span class="fa fa-server"></span>行为数据档案 </a>
@@ -236,8 +236,8 @@
                                         <dd id="store_rent"><a href="javascript:goToStoreRent()"><span class="fa fa-bicycle"></span>门店租赁统计</a></dd>
                                         <dd style="position:relative"><a href="javascript:goToProfitStat()"><span class="fa fa-gg"></span>毛利统计（运营）</a>
                                             <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
-                                        <dd style="position:relative"><a href="javascript:goToMemRemain()"><span class="fa fa-gg"></span>社员价值统计</a>
-                                            <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
+                                        <!--<dd style="position:relative"><a href="javascript:goToMemRemain()"><span class="fa fa-gg"></span>社员价值统计</a>-->
+                                            <!--<img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>-->
                                         <!--<dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-cubes"></span>产品运营</a></dd>
                                         <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-comments-o"></span>混片情况</a></dd>-->
                                     </dl>
