--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -976,7 +976,7 @@ $('#store_name_try').keyup(function(event){
 						   +"<td><a target=\"memberData_list\" href=\"memberData_list.html?t="+encode64(target)+"&c="+encode64(cityno)+"&tag="+encode64("其他")+"&time="+encode64(sdate)+"&cn="+encode64(cityname)+"\">"+jData[i].othercount+"</a></td>"
 						   +"<td><a target=\"memberData_list\" href=\"memberData_list.html?t="+encode64(target)+"&c="+encode64(cityno)+"&time="+encode64(sdate)+"&cn="+encode64(cityname)+"\">"+jData[i].nowcount+"</a></td>"*/
                            infoStr +="<td>"+jData[i].axccount+"</td>"
-                               +"<td>"+jData[i].tjhcount+"<</td>"
+                               +"<td>"+jData[i].tjhcount+"</td>"
                                +"<td>"+jData[i].cgkcount+"</td>"
                                +"<td>"+jData[i].dhmcount+"</td>"
                                +"<td>"+jData[i].count199+"</td>"
